--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,10 @@ body{
     font-family: 'Overpass', sans-serif;
 }
 
+sr-only{
+    display: none;
+}
+
 .center-my-content{
     display: flex;
     align-items: center;
@@ -55,6 +59,11 @@ body{
     justify-content: space-between;
 }
 
+.rating-score input{
+    display: none;
+}
+
+/* submit btn */
 .rating .btn{
     display: block;
     text-align: center;
@@ -85,14 +94,14 @@ h1{
     margin-bottom: 20px;
 }
 
-p, .rate{
+p, .rating label{
     color:var(--clr-Light-Grey);
     font-size: 1.5rem;
     line-height: 2.2rem;
     margin-bottom: 2.2rem ;
 }
 
-.rate{
+.rating label{
     font-weight: var(--fw-700);
     border-radius: 50%;
     padding: 1.2rem 2rem;
@@ -116,11 +125,6 @@ a{
 
 .rate:hover{
     background-color: var(--clr-Medium-Grey);
-    color:var(--clr-White);
-}
-
-.rate-on{
-    background-color: var(--clr-Orange);
     color:var(--clr-White);
 }
 
@@ -155,6 +159,11 @@ a:hover{
     font-weight: var(--fw-400);
     color:var(--clr-Light-Grey);
     margin-bottom: 3rem;
+}
+
+.rating-score .rate-on{
+    background-color: var(--clr-Orange);
+    color:var(--clr-White);
 }
 
 @media screen and (min-width:1440px) {
